manifests/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: markdown-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: markdown-client
  template:
    metadata:
      labels:
        app: markdown-client
    spec:
      containers:
        - name: client
          image: zanaad/markdown-client 
          ports:
            - containerPort: 80
