manifests/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: markdown-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: markdown-server
  template:
    metadata:
      labels:
        app: markdown-server
    spec:
      containers:
        - name: server
          image: zanaad/markdown-server
          ports:
            - containerPort: 3001
          readinessProbe:
            httpGet:
              path: /
              port: 3001
            initialDelaySeconds: 3
            periodSeconds: 10
