manifests/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-svc
spec:
  type: ClusterIP
  selector:
    app: markdown-client
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
