manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: markdown-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-svc
                port:
                  number: 80
          - path: /generate-pdf
            pathType: Prefix
            backend:
              service:
                name: server-svc
                port:
                  number: 3001
